# LANCompute

./: .env.example  .envrc  .gitignore  CLAUDE.md  Makefile  README.md  config.yaml  mac_optimizer.py  network_scanner.py  pyproject.toml  pytest.ini  run_tests.py  setup_github_remote.sh
.claude/agents/: README.md  ai-engineer.md  api-documenter.md  architect-review.md  backend-architect.md  business-analyst.md  c-pro.md  cloud-architect.md  code-reviewer.md  compute-optimizer.md  content-marketer.md  context-manager.md  creative-solutions.md  cto.md  customer-support.md  data-scientist.md  database-architect.md  devops-engineer.md  distributed-systems-architect.md  elixir-expert.md  frontend-developer.md  fullstack-developer.md  go-engineer.md  java-developer.md  javascript-specialist.md  laravel-expert.md  mentor.md  mobile-developer.md  node-manager.md  performance-optimizer.md  product-manager.md  project-manager.md  protocol-designer.md  python-developer.md  qa-engineer.md  rails-developer.md  react-native-developer.md  refactoring-specialist.md  rust-engineer.md  scrum-master.md  (+10 more)
.github/workflows/: python-publish.yml
scripts/: lmstudio_chat.py
src/lancompute/: __init__.py  mac_optimizer.py  master_service.py  network_scanner.py  worker_service.py
tests/: test_lmstudio_integration.py  test_mac_optimizer.py  test_master_service.py  test_network_scanner.py  test_worker_service.py
