[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lancompute"
version = "0.1.0"
description = "LANCompute - Distributed computing platform for LLM workloads"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "psutil>=5.9.0",
    "requests>=2.28.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
ml = [
    "numpy>=1.21.0",
    "torch>=1.12.0",
    "tensorflow>=2.9.0",
]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "pytest-asyncio>=0.21.0",
]
dev = [
    "black>=22.0.0",
    "flake8>=5.0.0",
    "mypy>=1.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html",
    "-v"
]
markers = [
    "integration: integration tests that may hit external/local services",
]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
